[project]
name = "fastapi-calls"
version = "0.1.0"
description = "Backend API for calls"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "aioice==0.10.2",
    "aiortc==1.14.0",
    "alembic==1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "asyncpg==0.31.0",
    "av==16.1.0",
    "bcrypt==5.0.0",
    "cffi==2.0.0",
    "click==8.3.1",
    "colorama==0.4.6",
    "cryptography==46.0.5",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "fastapi==0.135.2",
    "google-crc32c==1.8.0",
    "greenlet==3.3.2",
    "h11==0.16.0",
    "idna==3.11",
    "ifaddr==0.2.0",
    "Mako==1.3.10",
    "MarkupSafe==3.0.3",
    "pillow==12.1.1",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "pydantic_core==2.41.5",
    "pyee==13.0.1",
    "PyJWT==2.12.1",
    "pylibsrtp==1.0.0",
    "pyOpenSSL==26.0.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.22",
    "SQLAlchemy==2.0.48",
    "starlette==1.0.0",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "uvicorn==0.42.0"
]
