[project]
name = "fastapi-calls"
version = "0.1.0"
description = "Backend API for calls"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "aioice==0.10.2",
    "aiortc==1.14.0",
    "alembic==1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "appdirs==1.4.4",
    "asyncpg==0.31.0",
    "audiolab==0.5.1",
    "av==16.1.0",
    "bcrypt==5.0.0",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.6",
    "click==8.3.1",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cryptography==46.0.5",
    "cycler==0.12.1",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "fastapi==0.135.2",
    "fonttools==4.62.1",
    "google-crc32c==1.8.0",
    "greenlet==3.3.2",
    "h11==0.16.0",
    "httptools==0.7.1",
    "humanize==4.15.0",
    "idna==3.11",
    "ifaddr==0.2.0",
    "Jinja2==3.1.6",
    "kiwisolver==1.5.0",
    "loguru==0.7.3",
    "Mako==1.3.10",
    "MarkupSafe==3.0.3",
    "matplotlib==3.10.8",
    "mpmath==1.3.0",
    "numpy==1.26.4",
    "packaging==23.2",
    "pillow==12.1.1",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "pydantic_core==2.41.5",
    "pyee==13.0.1",
    "PyJWT==2.12.1",
    "pylibsrtp==1.0.0",
    "pyOpenSSL==26.0.0",
    "pyparsing==3.3.2",
    "pyrnnoise==0.4.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.22",
    "PyYAML==6.0.3",
    "requests==2.33.0",
    "six==1.17.0",
    "smart_open==7.5.1",
    "soundfile==0.13.1",
    "SQLAlchemy==2.0.48",
    "starlette==1.0.0",
    "sympy==1.14.0",
    "tqdm==4.67.3",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "urllib3==2.6.3",
    "uvicorn==0.42.0",
    "watchfiles==1.1.1",
    "win32_setctime==1.2.0",
    "wrapt==2.1.2"
]
